@@ -764,7 +764,7 @@ void wxDropSource::PrepareIcon( int action, GdkDragContext *context )
 #ifndef __WXGTK3__
     GdkBitmap *mask;
     if ( icon->GetMask() )
-        mask = icon->GetMask()->GetBitmap();
+        mask = *icon->GetMask();
     else
         mask = NULL;
 
@@ -796,7 +796,9 @@ void wxDropSource::PrepareIcon( int action, GdkDragContext *context )
     cairo_pattern_t* pattern = cairo_get_source(cr);
     gdk_window_set_background_pattern(gtk_widget_get_window(m_iconWindow), pattern);
     cairo_destroy(cr);
-    cairo_surface_t* mask = icon->GetMask()->GetBitmap();
+    cairo_surface_t* mask = NULL;
+    if (icon->GetMask())
+        mask = *icon->GetMask();
     if (mask)
     {
         cairo_region_t* region = gdk_cairo_region_create_from_surface(mask);
